Fixed Table Cell Sizing & Overflow Removed the styling attributed I added in JS, Added overflow attributes to a container of the table rather than the table itself

--- a/main.css
+++ b/main.css
@@ -7,6 +7,10 @@ html {
     background-color: var(--bg-color);
 }
 
+main {
+    width: 100%;
+}
+
 button {
     padding: .25em 2em;
 
